style: fix SS mode mobile layout and sendEmails width on small screens

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -27,6 +27,19 @@
   }
 }
 
+@media screen and (max-width: 723px) {
+  #left-container.secret {
+    display: block;
+  }
+  #left-container.secret #name-list,
+  #left-container.secret .household,
+  #left-container.secret .ghost-house {
+    width: auto;
+    max-width: 347px;
+    margin: 0 auto 12px;
+  }
+}
+
 @media screen and (max-width: 630px) {
   #flex-div {
     display: block;
@@ -93,6 +106,11 @@
     margin: 0 auto 12px;
     max-width: 320px;
   }
+  #left-container.secret #name-list,
+  #left-container.secret .household,
+  #left-container.secret .ghost-house {
+    max-width: 320px;
+  }
 
 }
 
@@ -116,6 +134,11 @@
   #emailTable {
     min-width: 95%;
     margin: 0 5px;
+  }
+  .sendEmails {
+    min-width: 95%;
+    margin-left: 5px;
+    margin-right: 5px;
   }
 }
 
